# haskell-rolling-queue

./: rolling-queue.cabal
Data/STM/: RollingQueue.hs
testing/: .gitignore  trivial.expected  trivial.hs
