name:                rolling-queue
version:             0.1
synopsis:            Bounded FIFO for STM that discards old entries when full
-- description:
homepage:            https://github.com/joeyadams/haskell-rolling-queue
license:             BSD3
license-file:        LICENSE
author:              Joey Adams
maintainer:          joeyadams3.14159@gmail.com
copyright:           Copyright (c) Joseph Adams 2012
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
    exposed-modules:
        Data.STM.RollingQueue

    build-depends: base == 4.*
                 , stm

    ghc-options: -Wall -O2
